--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-#hero {
+/* #hero {
   background-image: url(../images/bg-hero.jpg);
 }
 #the-wedding-event {
@@ -12,4 +12,13 @@
 }
 footer {
   background-image: url(../images/bg-footer.jpg);
+} */
+
+/* Custom CSS for fade-in animation */
+.fade-in {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+.fade-in-visible {
+  opacity: 1;
 }
